--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,11 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
               }
             ],
             "styles": [
@@ -40,6 +45,9 @@
               },
               {
                 "input": "src/app/app.scss"
+              },
+              {
+              "input": "./node_modules/leaflet/dist/leaflet.css"
               }
             ],
             "scripts": [],
@@ -102,7 +110,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [],
+            "styles": [
+              {
+                "input": "./node_modules/leaflet/dist/leaflet.css"
+                }
+            ],
             "scripts": [],
             "assets": [
               {
@@ -114,6 +126,11 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "/assets"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
               }
             ]
           },
